# AICC_Local

./: .env.example  .gitignore  Dockerfile  QUICKSTART.md  QUICKSTART_OLLAMA.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
client/: index.html
server/: llm_module.py  main.py  pipeline.py  stt_module.py  stt_module_mlx.py  tts_module.py  vad_module.py
